cmake_minimum_required(VERSION 4.0)
project(myVector)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(vector_main src/main.cpp)
add_library(vector_class src/Vector.cpp)

target_link_libraries(vector_main vector_class)
target_include_directories(vector_class PUBLIC ${CMAKE_SOURCE_DIR}/include)

